--- a/Develop/index.html
+++ b/Develop/index.html
@@ -20,10 +20,10 @@
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password"
+            placeholder="Your Secure Password" 
             aria-label="Generated Password"
-          ></textarea>
-        </div>
+          ></textarea
+          ></div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
