--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -20,10 +21,10 @@
           <textarea
             readonly
             id="password"
-            placeholder="Your Secure Password" 
+            placeholder="Your Secure Password"
             aria-label="Generated Password"
-          ></textarea
-          ></div>
+          ></textarea>
+        </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
